initial comment using new project wizard

--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="new_reminder">new Reminder</string>
     <string name="exit">exit</string>
+    <string name="lbl_register">Register User</string>
+    <string name="lbl_email_hint">Invalid Email</string>
+    <string name="lbl_password_hint">Invalid Password</string>
 </resources>
